// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-duration-field Renders \`c-duration-field\` with custom props 1`] = `
<div
  class="layout"
>
  <div
    class="flex pr-3 xs7"
  >
    <c-number-field-stub
      disabled="true"
      label="Custom label"
      min="10"
      name="customName.value"
      required="true"
      value="12"
    />
  </div>
  <div
    class="flex xs5"
  >
    <div
      class="v-input v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light v-text-field v-select"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <label
              class="v-label v-label--active v-label--is-disabled theme--light"
              style="left: 0px; position: absolute;"
            >
              Custom units label
            </label>
            <div
              class="v-select__selections"
            >
              <div
                class="v-select__selection v-select__selection--comma v-select__selection--disabled"
              >
                Week
              </div>
              <input
                aria-readonly="false"
                autocomplete="off"
                disabled="disabled"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--clear"
              >
                <button
                  aria-label="Clear Custom units label"
                  class="v-icon notranslate v-icon--disabled v-icon--link material-icons theme--light"
                  disabled="disabled"
                  tabindex="-1"
                  type="button"
                >
                  clear
                </button>
              </div>
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-icon--disabled material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              name="customName.unit"
              type="hidden"
              value="w"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-duration-field Renders \`c-duration-field\` with custom props 2`] = `undefined`;

exports[`c-duration-field Renders \`c-duration-field\` with default props 1`] = `
<div
  class="layout"
>
  <div
    class="flex pr-3 xs7"
  >
    <c-number-field-stub
      label="Duration"
      min="1"
      name="duration.value"
      required="true"
      value="1"
    />
  </div>
  <div
    class="flex xs5"
  >
    <div
      class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <div
                class="v-select__selection v-select__selection--comma"
              >
                minute
              </div>
              <input
                aria-readonly="false"
                autocomplete="off"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              name="duration.unit"
              type="hidden"
              value="m"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-duration-field Renders \`c-duration-field\` with default props 2`] = `undefined`;

exports[`c-duration-field Renders \`c-duration-field\` with duration value as string 1`] = `
<div
  class="layout"
>
  <div
    class="flex pr-3 xs7"
  >
    <c-number-field-stub
      label="Duration"
      min="1"
      name="duration.value"
      required="true"
      value="asd"
    />
  </div>
  <div
    class="flex xs5"
  >
    <div
      class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <div
                class="v-select__selection v-select__selection--comma"
              >
                weeks
              </div>
              <input
                aria-readonly="false"
                autocomplete="off"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              name="duration.unit"
              type="hidden"
              value="w"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-duration-field Renders \`c-duration-field\` with duration value as undefined 1`] = `
<div
  class="layout"
>
  <div
    class="flex pr-3 xs7"
  >
    <c-number-field-stub
      label="Duration"
      min="1"
      name="duration.value"
      required="true"
    />
  </div>
  <div
    class="flex xs5"
  >
    <div
      class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <div
                class="v-select__selection v-select__selection--comma"
              >
                weeks
              </div>
              <input
                aria-readonly="false"
                autocomplete="off"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              name="duration.unit"
              type="hidden"
              value="w"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-duration-field Renders \`c-duration-field\` with errors 1`] = `
<div
  class="layout"
  value="[object Object]"
>
  <div
    class="flex pr-3 xs7"
  >
    <c-number-field-stub
      label="Duration"
      min="1"
      name="customName.value"
      required="true"
      value="1"
    />
  </div>
  <div
    class="flex xs5"
  >
    <div
      class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <div
                class="v-select__selection v-select__selection--comma"
              >
                minute
              </div>
              <input
                aria-readonly="false"
                autocomplete="off"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              name="customName.unit"
              type="hidden"
              value="m"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-duration-field Renders \`c-duration-field\` with errors 2`] = `undefined`;

exports[`c-duration-field Renders \`c-duration-field\` with long time list 1`] = `
<div
  class="layout"
>
  <div
    class="flex pr-3 xs7"
  >
    <c-number-field-stub
      label="Duration"
      min="1"
      name="duration.value"
      required="true"
      value="1"
    />
  </div>
  <div
    class="flex xs5"
  >
    <div
      class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <div
                class="v-select__selection v-select__selection--comma"
              >
                minute
              </div>
              <input
                aria-readonly="false"
                autocomplete="off"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              name="duration.unit"
              type="hidden"
              value="m"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-duration-field Renders \`c-duration-field\` with long time list 2`] = `undefined`;

exports[`c-duration-field Renders \`c-duration-field\` with value is greater than the minimum 1`] = `
<div
  class="layout"
>
  <div
    class="flex pr-3 xs7"
  >
    <c-number-field-stub
      label="Duration"
      min="100"
      name="duration.value"
      required="true"
      value="101"
    />
  </div>
  <div
    class="flex xs5"
  >
    <div
      class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <div
                class="v-select__selection v-select__selection--comma"
              >
                seconds
              </div>
              <input
                aria-readonly="false"
                autocomplete="off"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              name="duration.unit"
              type="hidden"
              value="s"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
